# CloudDisk

./: CMakeLists.txt  README.md  logger.cpp  logger.h  logindialog.cpp  logindialog.h  logindialog.ui  loginfoinstance.cpp  loginfoinstance.h  logintitle.ui  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  res.qrc
